View de editar orçamento implementada
Métodos de editar orçamento finalizados e view de editar orçamento implementada

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "default": "Server=localhost;Database=BDTask;Trusted_Connection=True;TrustServerCertificate=True"
+    "default": "Server=localhost;Database=AfReparosAutomotivos;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
