Método Delete para orçamentos implementado
Método Delete para orçamentos implementado

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "default": "Server=localhost;Database=AfReparosAutomotivos;Trusted_Connection=True;TrustServerCertificate=True"
-  }
+  },
+  "_comment": "Server=localhost;Database=AfReparosAutomotivos;User Id=aluno;Password=dba;Integrated Security=False;TrustServerCertificate=True;"
 }
