--- a/AfReparosAutomotivos.csproj
+++ b/AfReparosAutomotivos.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.2" />
+    <PackageReference Include="QuestPDF" Version="2024.12.0" />
   </ItemGroup>
 
 </Project>
