Correção do PDF

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,5 @@
   "ConnectionStrings": {
     "default": "Server=localhost;Database=AfReparosAutomotivos;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   },
-  "_comment": "Server=localhost;Database=AfReparosAutomotivos;User Id=aluno;Password=dba;Integrated Security=False;TrustServerCertificate=True;"
+  "_comment": "Server=localhost;Database=AfReparosAutomotivos;User Id=sa;Password=dba;Integrated Security=False;TrustServerCertificate=True;"
 }
